[gd_scene load_steps=7 format=3 uid="uid://c0e2uouucpnju"]

[ext_resource type="Script" path="res://branched_multiplayer.gd" id="1_5uw2j"]
[ext_resource type="PackedScene" uid="uid://bv3x4endub1kn" path="res://ui/scene_options.tscn" id="2_lkf4v"]
[ext_resource type="PackedScene" uid="uid://c4npj6y0q3lhp" path="res://ui/network_options.tscn" id="3_nvuel"]
[ext_resource type="PackedScene" uid="uid://bthgkl73sob7y" path="res://ui/replication_options.tscn" id="4_p1rq2"]
[ext_resource type="PackedScene" uid="uid://x24v8s7wonow" path="res://ui/peer_stats.tscn" id="5_6bh2h"]
[ext_resource type="PackedScene" uid="uid://dbpfj6ktqqfgj" path="res://ui/net_stats.tscn" id="6_nhrjv"]

[node name="Main" type="Node" node_paths=PackedStringArray("options", "stats_view", "view")]
script = ExtResource("1_5uw2j")
options = NodePath("TwoColumn/Options")
stats_view = NodePath("TwoColumn/StatsView")
view = NodePath("TwoColumn/StatsView/View")

[node name="TwoColumn" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="TwoColumn"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Reset" type="Button" parent="TwoColumn/Options"]
layout_mode = 2
text = "Reset"

[node name="SceneOptions" parent="TwoColumn/Options" instance=ExtResource("2_lkf4v")]
unique_name_in_owner = true
layout_mode = 2

[node name="NetworkOptions" parent="TwoColumn/Options" instance=ExtResource("3_nvuel")]
layout_mode = 2

[node name="ReplicationOptions" parent="TwoColumn/Options" instance=ExtResource("4_p1rq2")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatsView" type="VSplitContainer" parent="TwoColumn"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Stats" type="HBoxContainer" parent="TwoColumn/StatsView"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="ServerStats" parent="TwoColumn/StatsView/Stats" instance=ExtResource("5_6bh2h")]
layout_mode = 2

[node name="ClientStats" parent="TwoColumn/StatsView/Stats" instance=ExtResource("5_6bh2h")]
layout_mode = 2

[node name="NetStats" parent="TwoColumn/StatsView/Stats" instance=ExtResource("6_nhrjv")]
unique_name_in_owner = true
layout_mode = 2

[node name="View" type="Control" parent="TwoColumn/StatsView"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="TwoColumn/Options/Reset" to="." method="_on_reset_pressed"]
[connection signal="scene_selected" from="TwoColumn/Options/SceneOptions" to="." method="_on_scene_options_scene_selected"]
[connection signal="split_view_change" from="TwoColumn/Options/SceneOptions" to="." method="_on_scene_options_split_view_change"]
[connection signal="frame_delay" from="TwoColumn/Options/NetworkOptions" to="." method="_on_network_options_frame_delay"]
[connection signal="jitter_chance" from="TwoColumn/Options/NetworkOptions" to="." method="_on_network_options_jitter_chance"]
[connection signal="jitter_enabled" from="TwoColumn/Options/NetworkOptions" to="." method="_on_network_options_jitter_enabled"]
[connection signal="jitter_range" from="TwoColumn/Options/NetworkOptions" to="." method="_on_network_options_jitter_range"]
